--- a/src/Funny-demo/shotFire/shotFire.html
+++ b/src/Funny-demo/shotFire/shotFire.html
@@ -27,9 +27,7 @@
 <div class="city"><img src="city.png" alt=""/></div>
 <img src="moon.png" alt="" id="moon" style="visibility: hidden;"/>
 <div style="display:none">
-  <div class="shape">新年快乐</div>
-  <div class="shape">合家幸福</div>
-  <div class="shape">HAPPY</div>
+  <div class="shape">王雅琦</div>
 </div>
 <audio src="boom.mp3" preload="auto"></audio>
 <audio src="boom.mp3" preload="auto"></audio>
